<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Raja Mantri Chor Sipahi</string>
    <string name="action_settings">Settings</string>
    <!-- Google's official AdMob sample ids: replace with your own before publishing. -->
    <string name="admob_app_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="next_chance">Next Chance</string>
    <string name="winner">Winner</string>
    <string name="info">Info</string>
    <string name="share">Share</string>
    <string name="moreApps">More Apps</string>
    <string name="click_on_next_chance_or_winner">Click on Next Chance or Winner</string>
    <string name="please_complete_first_chance">Please Complete first Chance</string>
    <string name="please_complete_this_chance">Please complete this Chance</string>
    <string name="please_click_on_shuffle">Please Click on Shuffle</string>
    <string name="_will_find_the_Chor"> will find the Chor!</string>
    <string name="Guess">Guess</string>
    <string name="Submit">Submit</string>
    <string name="whose_turn"> \'s Turn</string>
    <string name="click_on_guess">Click on Guess !</string>
    <string name="press_again_to_exit">Press Again To Exit !</string>
    <string name="Shuffle">Shuffle</string>
    <string name="click_again_to_close_chit">Click Again To Close Chit ! </string>
    <string name="shuffle">Shuffle</string>
    <string name="player1">Player1</string>
    <string name="player2">Player2</string>
    <string name="player3">Player3</string>
    <string name="player4">Player4</string>
    <string name="enter_player_names">Enter Player Names</string>
    <string name="guess_is_right">Your Guess is Right</string>
    <string name="guess_is_wrong">Your Guess is Wrong</string>

</resources>
