<!--
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/redbackground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="6.0">

        <TextView
            android:id="@+id/enterPlayerName"
            android:layout_marginTop="125dp"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1.0"
            android:text="@string/enter_player_names"
            android:textColor="#fff1eab8"
            android:textSize="24sp" />


        <EditText

            android:id="@+id/firstPerson"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_weight="1.0"
            android:layout_marginTop="5dp"
            android:background="#fff1eab8"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/player1"
            android:textColor="#ffd85656" />

        <EditText

            android:id="@+id/secondPerson"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_weight="1.0"
            android:layout_marginTop="15dp"
            android:background="#fff1eab8"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/player2"
            android:textColor="#ffd85656" />

        <EditText

            android:id="@+id/thirdPerson"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_weight="1.0"
            android:layout_marginTop="15dp"
            android:background="#fff1eab8"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/player3"
            android:textColor="#ffd85656" />

        <EditText

            android:id="@+id/fourthPerson"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_weight="1.0"
            android:layout_marginTop="15dp"
            android:background="#fff1eab8"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/player4"
            android:textColor="#ffd85656" />

        <submitButton
            android:id="@+id/submitButton"
            android:layout_width="119dp"
            android:layout_height="0dp"
            android:layout_weight="1.0"
            android:layout_marginTop="100dp"
            android:background="#fff1eab8"
            android:text="@string/Guess"
            android:textAllCaps="false"
            android:textColor="#ffd85656"
            android:textSize="24sp" />
    </LinearLayout>
</RelativeLayout>
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/redbackground">

    <TextView
        android:id="@+id/enterPlayerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:text="@string/enter_player_names"
        android:textColor="#fff1eab8"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18" />


    <EditText

        android:id="@+id/firstPerson"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_weight="1.0"
        android:background="#fff1eab8"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/player1"
        android:textColor="#ffd85656"
        app:layout_constraintBottom_toTopOf="@+id/secondPerson"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterPlayerName" />

    <EditText

        android:id="@+id/secondPerson"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_weight="1.0"
        android:background="#fff1eab8"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/player2"
        android:textColor="#ffd85656"
        app:layout_constraintBottom_toTopOf="@+id/thirdPerson"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstPerson" />

    <EditText

        android:id="@+id/thirdPerson"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_weight="1.0"
        android:background="#fff1eab8"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/player3"
        android:textColor="#ffd85656"
        app:layout_constraintBottom_toTopOf="@+id/fourthPerson"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondPerson" />

    <EditText

        android:id="@+id/fourthPerson"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_weight="1.0"
        android:background="#fff1eab8"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/player4"
        android:textColor="#ffd85656"
        app:layout_constraintBottom_toTopOf="@+id/submitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thirdPerson" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:background="#fff1eab8"
        android:text="@string/Submit"
        android:textAllCaps="false"
        android:textColor="#ffd85656"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fourthPerson" />
</androidx.constraintlayout.widget.ConstraintLayout>