<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/redbackgorundh">

    <TextView
        android:id="@+id/toastText"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="#FFF1EAB8"
        android:paddingLeft="22dp"
        android:paddingStart="24dp"
        android:paddingTop="16dp"
        android:textColor="#ffd85656"
        android:textSize="8pt"
        android:visibility="gone" />


    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/player1"
        android:textColor="#fff1eab8"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintStart_toStartOf="@+id/imageView1"
        ads:layout_constraintTop_toTopOf="parent"
        ads:layout_constraintVertical_bias="0.18" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:textColor="#fff1eab8"
        ads:layout_constraintBottom_toBottomOf="@+id/textView1"
        ads:layout_constraintEnd_toStartOf="@+id/textView2"
        ads:layout_constraintStart_toEndOf="@+id/textView1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player2"
        android:textColor="#fff1eab8"
        ads:layout_constraintBottom_toBottomOf="@+id/textView5"
        ads:layout_constraintEnd_toStartOf="@+id/textView6"
        ads:layout_constraintHorizontal_bias="0.5"
        ads:layout_constraintStart_toEndOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        
        android:textColor="#fff1eab8"
        ads:layout_constraintBottom_toBottomOf="@+id/textView2"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toEndOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/player3"
        android:textColor="#fff1eab8"
        ads:layout_constraintStart_toStartOf="@+id/textView1"
        ads:layout_constraintTop_toBottomOf="@+id/textView1" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:textColor="#fff1eab8"
        ads:layout_constraintBottom_toBottomOf="@+id/textView3"
        ads:layout_constraintEnd_toStartOf="@+id/textView4"
        ads:layout_constraintHorizontal_bias="0.5"
        ads:layout_constraintStart_toEndOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player4"
        android:textColor="#fff1eab8"
        ads:layout_constraintBottom_toBottomOf="@+id/textView7"
        ads:layout_constraintEnd_toStartOf="@+id/textView8"
        ads:layout_constraintHorizontal_bias="0.5"
        ads:layout_constraintStart_toEndOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        
        android:textColor="#fff1eab8"
        ads:layout_constraintBottom_toBottomOf="@+id/textView4"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintHorizontal_bias="0.5"
        ads:layout_constraintStart_toEndOf="@+id/textView4" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/podopen"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toStartOf="@+id/imageView2"
        ads:layout_constraintHorizontal_bias="0.5"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toTopOf="parent"
        ads:layout_constraintVertical_bias="0.32999998" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:rotation="315"
        android:textColor="#ff000000"
        ads:layout_constraintBottom_toBottomOf="@+id/imageView1"
        ads:layout_constraintTop_toTopOf="@+id/imageView1"
        ads:layout_constraintVertical_bias="0.32999998"
        tools:layout_editor_absoluteX="68dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/podopen"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintHorizontal_bias="0.5"
        ads:layout_constraintStart_toEndOf="@+id/imageView1"
        ads:layout_constraintTop_toTopOf="@+id/imageView1" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="false"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:rotation="45"
        android:textColor="#ff000000"
        ads:layout_constraintEnd_toEndOf="@+id/imageView2"
        ads:layout_constraintHorizontal_bias="0.77"
        ads:layout_constraintStart_toStartOf="@+id/imageView2"
        tools:layout_editor_absoluteY="214dp" />


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:src="@drawable/podopen"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toStartOf="@+id/imageView4"
        ads:layout_constraintHorizontal_bias="0.5"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toBottomOf="@+id/imageView1"
        ads:layout_constraintVertical_bias="0.050000012" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:rotation="45"
        android:textColor="#ff000000"
        ads:layout_constraintBottom_toBottomOf="@+id/imageView3"
        ads:layout_constraintEnd_toEndOf="@+id/imageView3"
        ads:layout_constraintHorizontal_bias="0.07"
        ads:layout_constraintStart_toStartOf="@+id/imageView3"
        ads:layout_constraintTop_toTopOf="@+id/imageView3"
        ads:layout_constraintVertical_bias="0.57" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/podopen"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintHorizontal_bias="0.5"
        ads:layout_constraintStart_toEndOf="@+id/imageView3"
        ads:layout_constraintTop_toTopOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/imageView4"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:rotation="315"
        android:textColor="#ff000000"
        ads:layout_constraintBottom_toBottomOf="@+id/imageView4"
        ads:layout_constraintEnd_toEndOf="@+id/imageView4"
        ads:layout_constraintHorizontal_bias="0.65"
        ads:layout_constraintStart_toStartOf="@+id/imageView4"
        ads:layout_constraintTop_toTopOf="@+id/imageView4"
        ads:layout_constraintVertical_bias="0.63" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Br"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"
        ads:layout_constraintBottom_toTopOf="@+id/Br"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Br"
        android:layout_width="119dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/navigation"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="#fff1eab8"
        android:text="@string/shuffle"
        android:textAllCaps="false"
        android:textColor="#ffd85656"
        android:textSize="24sp"
        ads:layout_constraintBottom_toTopOf="@+id/navigation"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:foreground="?attr/selectableItemBackground"
        ads:itemBackground="@android:color/white"
        ads:itemIconTint="@android:color/holo_purple"
        ads:itemTextColor="@android:color/holo_red_dark"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:menu="@layout/navigation" />

</androidx.constraintlayout.widget.ConstraintLayout>