<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/redbackgorundh">

    <TextView
        android:id="@+id/toastText"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="#FFF1EAB8"
        android:paddingLeft="22dp"
        android:paddingStart="24dp"
        android:paddingTop="16dp"
        android:textColor="#ffd85656"
        android:textSize="8pt"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="115dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/firstLL"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingLeft="48dp"
            android:paddingStart="48dp">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="0dp"
                android:layout_height="37dp"
                android:layout_weight="1"
                android:text="@string/player1"
                android:textColor="#fff1eab8" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:textColor="#fff1eab8" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="37dp"
                android:layout_weight="1"
                android:text="@string/player2"
                android:textColor="#fff1eab8" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:textColor="#fff1eab8" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/secondLL"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingLeft="48dp"
            android:paddingStart="48dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="37dp"
                android:layout_weight="1"
                android:text="@string/player3"
                android:textColor="#fff1eab8" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:textColor="#fff1eab8" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="37dp"
                android:layout_weight="1"
                android:text="@string/player4"
                android:textColor="#fff1eab8" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:textColor="#fff1eab8" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/thirdLL"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="25dp"
            android:layout_weight="3"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="48dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/podopen" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:rotation="315"
                        android:text=""
                        android:textColor="#ff000000" />
                </RelativeLayout>
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="48dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/podopen" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        android:rotation="45"
                        android:text=""
                        android:textColor="#ff000000" />
                </RelativeLayout>
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_weight="3"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="48dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/podopen" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:rotation="45"
                        android:textColor="#ff000000" />
                </RelativeLayout>
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="48dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/podopen" />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/imageView4"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_marginBottom="20dp"
                        android:rotation="315"
                        android:textColor="#ff000000" />
                </RelativeLayout>
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <com.google.android.gms.ads.AdView
                    android:id="@+id/adView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/Br"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="10dp"
                    ads:adSize="BANNER"
                    ads:adUnitId="@string/banner_ad_unit_id" />

                <Button
                    android:id="@+id/Br"
                    android:layout_width="119dp"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/navigation"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="20dp"
                    android:background="#fff1eab8"
                    android:text="@string/shuffle"
                    android:textAllCaps="false"
                    android:textColor="#ffd85656"
                    android:textSize="24sp" />

                <com.google.android.material.bottomnavigation.BottomNavigationView
                    android:id="@+id/navigation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:foreground="?attr/selectableItemBackground"
                    ads:itemBackground="@android:color/white"
                    ads:itemIconTint="@android:color/holo_purple"
                    ads:itemTextColor="@android:color/holo_red_dark"
                    ads:menu="@layout/navigation" />
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>
    <!--   <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="63dp"
           android:layout_x="0dp"
           android:layout_y="506dp"
           android:background="#ffffffff"
           android:alpha=".5"
           android:weightSum="1"
           android:gravity="bottom"
           android:id="@+id/linearLayout"
           android:layout_alignParentBottom="true"
           android:layout_alignParentLeft="true"
           android:layout_alignParentStart="true">

           <ImageButton
               android:layout_width="wrap_content"
               android:layout_height="63dp"
               android:id="@+id/next"
               android:background="@null"
               android:layout_weight="0.21"
               android:src="@drawable/nex"
               android:layout_marginLeft="7dp" />

           <ImageButton
               android:layout_width="wrap_content"
               android:layout_height="63dp"
               android:src="@drawable/troph"
               android:id="@+id/winner"
               android:layout_x="142dp"
               android:background="@null"
               android:layout_weight="0.21"
               android:layout_marginLeft="50dp" />
           <ImageButton
               android:layout_width="wrap_content"
               android:layout_height="63dp"
               android:id="@+id/info"
               android:src="@drawable/inf"
               android:layout_x="186dp"
               android:background="@null"
               android:layout_weight="0.21"
               android:layout_marginLeft="50dp" />
           <ImageButton
               android:layout_width="wrap_content"
               android:layout_height="63dp"
               android:src="@drawable/shar"
               android:id="@+id/share"
               android:layout_x="210dp"
               android:background="@null"
               android:layout_weight="0.21"
               android:layout_marginLeft="50dp" />



       </LinearLayout>-->


</RelativeLayout>
